@@ -60,6 +60,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix saving resume data when removing all trackers
 	* fix bug in udp_socket when changing socks5 proxy quickly
 
 0.16.17 release
